# chriscarl.python.web

./: CHANGELOG.md  README.md  pyproject.toml
apps/: google-gemini-auto-prompt.py
src/chriscarl/core/lib/third/: selenium.py
tests/chriscarl/core/lib/third/: test_selenium.py
